updated the design

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/0df8f5424c.js"
+      crossorigin="anonymous"
+    ></script>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,10 +20,21 @@
           Sachin Shapur</a
         >
         <div id="navbar">
-          <div>About Me</div>
-          <div>Resume</div>
-          <div>Portfolio</div>
-          <div>Contact</div>
+          <div>
+            <i
+              class="fa-solid fa-mobile-screen fa-lg"
+              style="color: #007ced"
+            ></i
+            >7892067214
+          </div>
+          <div>
+            <i class="fa-regular fa-envelope fa-lg" style="color: #007ced"></i>
+            sachin.shapur@gmail.com
+          </div>
+          <div>
+            <i class="fa-solid fa-location-dot fa-lg" style="color: #007ced"></i
+            >Bangalore
+          </div>
         </div>
       </div>
       <div id="uppercontainer">
@@ -45,83 +61,123 @@
       <div id="lowercontainer">
         <div>
           <h2>Education</h2>
-          <div id="college">
-            <p>Mvj College of Engineering</p>
+          <div id="college" class="boxshadow">
+            <p>Mvj College of Engineering (Electronics & Communication)</p>
+
             <p>71.25%</p>
             <i>Aug 2013 - Jun 2017</i>
           </div>
-          <h2>Experince</h2>
-          <div id="project">
-            <h3>In Time Tec, Bangalore</h3>
-            <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
-            <ul>
-              <li>
-                Led the development of the Rise IdahoStars and IDLA mobile
-                application from scratch, using React Native and following clean
-                code principles to ensure maintainability and scalability.
-                Designed and developed several mobile applications using React
-                Native for both iOS and Android platforms.
-              </li>
-              <li>
-                Collaborated with the product team to define requirements and
-                ensure smooth integration of the applications with the back- end
-                API.
-              </li>
-              <li>
-                Implemented new features and optimized existing ones to enhance
-                the user experience and increase app performance.
-              </li>
-              <li>
-                Mentored junior developers and participated in knowledge-sharing
-                initiatives to foster continuous learning and growth within the
-                team.
-              </li>
-              <li>
-                Established development processes, code reviews, and continuous
-                integration and delivery (CI/CD) pipelines to improve team
-                efficiency and ensure high-quality code.
-              </li>
-            </ul>
+        </div>
+        <h2>Experince</h2>
+        <div id="project" class="boxshadow">
+          <h3>In Time Tec, Bangalore</h3>
+          <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
+        </div>
+        <div id="project" class="boxshadow">
+          <h3>In Time Tec, Bangalore</h3>
+          <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
+        </div>
+        <h2>Professional Skills</h2>
+        <div class="boxshadow">
+          <div id="skillrow">
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
           </div>
-          <div id="project">
-            <h3>In Time Tec, Bangalore</h3>
-            <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
-            <ul>
-              <li>
-                Led the development of the Rise IdahoStars and IDLA mobile
-                application from scratch, using React Native and following clean
-                code principles to ensure maintainability and scalability.
-                Designed and developed several mobile applications using React
-                Native for both iOS and Android platforms.
-              </li>
-              <li>
-                Collaborated with the product team to define requirements and
-                ensure smooth integration of the applications with the back- end
-                API.
-              </li>
-              <li>
-                Implemented new features and optimized existing ones to enhance
-                the user experience and increase app performance.
-              </li>
-              <li>
-                Mentored junior developers and participated in knowledge-sharing
-                initiatives to foster continuous learning and growth within the
-                team.
-              </li>
-              <li>
-                Established development processes, code reviews, and continuous
-                integration and delivery (CI/CD) pipelines to improve team
-                efficiency and ensure high-quality code.
-              </li>
-            </ul>
+          <div id="skillrow">
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+          </div>
+          <div id="skillrow">
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML</p>
+              <progress id="file" value="80" max="100"></progress>
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <h4>Contact</h4>
-        <p>phone icon 7892067214</p>
-        <p>email icon sachin.shapur@gmail.com</p>
-        <p>place icon Bangalore</p>
       </div>
     </div>
   </body>
