added experince block

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
             sachin.shapur@gmail.com
           </div>
           <div>
+            <i class="fa-brands fa-github fa-lg" style="color: #007ced"></i
+            ><a href="https://github.com/SachinShapur" target="_blank"
+              >Github</a
+            >
+          </div>
+          <div>
+            <i class="fa-brands fa-linkedin-in fa-lg" style="color: #007ced"></i
+            ><a
+              href="https://in.linkedin.com/in/sachin-shapur-2bbb92155?trk=people-guest_people_search-card"
+              target="_blank"
+              >Linkedin</a
+            >
+          </div>
+          <div>
             <i class="fa-solid fa-location-dot fa-lg" style="color: #007ced"></i
             >Bangalore
           </div>
@@ -43,19 +57,15 @@
           <h3 id="role">Frontend-developer</h3>
           <h1 id="name">Sachin Shapur</h1>
           <p>
-            Experienced mobile developer with a strong focus on writing clean,
-            efficient, and maintainable code using Flutter and React. Highly
-            skilled in software development best practices, including agile
-            methodologies and test-driven development. Demonstrated ability to
-            design and develop high-quality mobile applications that meet user
-            requirements and exceed expectations. Committed to continuous
-            learning and professional growth in the ever-evolving field of
-            mobile development.
+            Experienced mobile and web app developer with a strong focus on
+            writing clean, efficient, and maintainable code using React and
+            React Native. Highly skilled in software development best practices,
+            including agile methodologies and test-driven development.
+            Demonstrated ability to design and develop high-quality mobile and
+            web applications that meet user requirements and exceed
+            expectations. Committed to continuous learning and professional
+            growth in the ever-evolving field of mobile and web app development.
           </p>
-          <div>
-            <div>Download CV</div>
-            <div>Contact</div>
-          </div>
         </div>
       </div>
       <div id="lowercontainer">
@@ -64,14 +74,63 @@
           <div id="college" class="boxshadow">
             <p>Mvj College of Engineering (Electronics & Communication)</p>
 
-            <p>71.25%</p>
+            <p>72.25%</p>
             <i>Aug 2013 - Jun 2017</i>
           </div>
         </div>
         <h2>Experince</h2>
         <div id="project" class="boxshadow">
           <h3>In Time Tec, Bangalore</h3>
-          <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
+          <h4>Technical Lead</h4>
+          <h5>
+            <a href="https://stable-rc.qa.plextrac.ninja/login" target="_blank"
+              >Plextrac</a
+            >
+            <i>(DEC 2022 - Present)</i>
+          </h5>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
+          <h4>Technical Lead</h4>
+          <h5>
+            RISE IdahoSTARS
+            <a
+              href="https://apps.apple.com/in/app/rise-idahostars/id1658133316"
+              target="_blank"
+              >IOS</a
+            >
+            <a
+              href="https://play.google.com/store/apps/details?id=org.riseidahostars&hl=en_IN&gl=US"
+              target="_blank"
+              >Android</a
+            >
+            <i>(Jan 2022 - Dec 2022)</i>
+          </h5>
           <ul>
             <li>
               Led the development of the Rise IdahoStars and IDLA mobile
@@ -137,44 +196,44 @@
         <div class="boxshadow">
           <div id="skillrow">
             <div style="width: 100%">
-              <p>HTML</p>
+              <p>JavaScript & TypeScript</p>
+              <progress id="file" value="95" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>HTML & CSS</p>
               <progress id="file" value="80" max="100"></progress>
             </div>
             <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
-            </div>
-            <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
-            </div>
-          </div>
-          <div id="skillrow">
-            <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
-            </div>
-            <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
-            </div>
-            <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
+              <p>React</p>
+              <progress id="file" value="90" max="100"></progress>
             </div>
           </div>
           <div id="skillrow">
             <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
+              <p>React Native</p>
+              <progress id="file" value="95" max="100"></progress>
             </div>
             <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
+              <p>Angular</p>
+              <progress id="file" value="70" max="100"></progress>
             </div>
             <div style="width: 100%">
-              <p>HTML</p>
-              <progress id="file" value="80" max="100"></progress>
+              <p>Nodejs</p>
+              <progress id="file" value="70" max="100"></progress>
+            </div>
+          </div>
+          <div id="skillrow">
+            <div style="width: 100%">
+              <p>MongoDB & Postgress</p>
+              <progress id="file" value="70" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>Flutter</p>
+              <progress id="file" value="40" max="100"></progress>
+            </div>
+            <div style="width: 100%">
+              <p>Java</p>
+              <progress id="file" value="60" max="100"></progress>
             </div>
           </div>
         </div>
