--- a/index.html
+++ b/index.html
@@ -159,10 +159,114 @@
               efficiency and ensure high-quality code.
             </li>
           </ul>
+
+          <h4>Senior Software Engineer</h4>
+          <h5>
+            HP Dune
+            <i>(Jan 2022 - Dec 2022)</i>
+          </h5>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
+
+          <!-- -->
+
+          <h5>
+            TouchFree MFP
+            <i>(Jan 2022 - Dec 2022)</i>
+          </h5>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
+
+          <h4>Software Engineer <i>(Oct 2017 - Sep 2019)</i></h4>
+          <h5>
+            HP DAAS Prortal
+            <i>(Jan 2022 - Dec 2022)</i>
+          </h5>
+          <ul>
+            <li>
+              Led the development of the Rise IdahoStars and IDLA mobile
+              application from scratch, using React Native and following clean
+              code principles to ensure maintainability and scalability.
+              Designed and developed several mobile applications using React
+              Native for both iOS and Android platforms.
+            </li>
+            <li>
+              Collaborated with the product team to define requirements and
+              ensure smooth integration of the applications with the back- end
+              API.
+            </li>
+            <li>
+              Implemented new features and optimized existing ones to enhance
+              the user experience and increase app performance.
+            </li>
+            <li>
+              Mentored junior developers and participated in knowledge-sharing
+              initiatives to foster continuous learning and growth within the
+              team.
+            </li>
+            <li>
+              Established development processes, code reviews, and continuous
+              integration and delivery (CI/CD) pipelines to improve team
+              efficiency and ensure high-quality code.
+            </li>
+          </ul>
         </div>
         <div id="project" class="boxshadow">
-          <h3>In Time Tec, Bangalore</h3>
-          <h4>Technical Lead <i>(Jan 2022 - Dec 2022)</i></h4>
+          <h3>Huawei Technology India R & D Bangalore</h3>
+          <h4>Associate Software Engineer <i>(Oct 2017 - Sep 2019)</i></h4>
+          <h5>U Traffic</h5>
           <ul>
             <li>
               Led the development of the Rise IdahoStars and IDLA mobile
